[package]
name = "granite"
version = "1.0.3"
authors = ["Kotauskas <v.toncharov@gmail.com>"]
edition = "2018"

readme = "README.md"
license = "MIT OR Apache-2.0"

repository = "https://github.com/kotauskas/granite.rs"
documentation = "https://docs.rs/granite/*/granite"
description = "Generic backing storage framework for building data structures."
categories = ["data-structures", "no-std", "rust-patterns"]
keywords = ["storage", "sparse_storage"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tinyvec = { version = "1.2", optional = true, default_features = false, features = ["rustc_1_40"] }
arrayvec = { version = "0.5", optional = true, default_features = false }
smallvec = { version = "1.4", optional = true }
slab = { version = "0.4", optional = true }
slotmap = { version = "0.4", optional = true }

[features]
default = ["alloc"]
alloc = ["tinyvec/alloc"]

union_optimizations = []
doc_cfg = []

[package.metadata.docs.rs]
features = [
    "alloc",
    "tinyvec",
    "arrayvec",
    "smallvec",
    "slab",
    "slotmap",
    "union_optimizations",
    "doc_cfg",
]
